* api: add new function config_set_desc_plugin (task #10925)
* api: add new functions buffer_match_list and window_search_with_buffer
* plugins: fix memory leaks when setting buffer callbacks after /upgrade
  (plugins: irc, relay, xfer, scripts)
* aspell: add section "option" in aspell.conf for speller options (task #11083)
* aspell: fix spellers used after switch of window (bug #32811)
* irc: add option "ssl_priorities" in servers (task #10106, debian #624055)
* irc: add modifier "irc_in2_xxx" (called after charset decoding)
* irc: fix memory leak when copying or renaming server
* irc: do not rejoin channels where /part has been issued before reconnection
  to server (bug #33029)
* irc: use nick color for users outside the channel
* irc: replace options irc.color.nick_prefix_{op|halfop|voice|user} by a single
  option irc.color.nick_prefixes (task #10888)
* irc: update short name of server buffer when server is renamed
* irc: fix local variable "away" on server buffer (set/delete it each time away
  is set or removed on server)
* irc: add new options irc.look.buffer_switch_autojoin and
  irc.look.buffer_switch_join (task #8542, task #10506)
* irc: add new option irc.look.smart_filter_nick
* irc: ignore join if nick is not self nick and if channel buffer does not exist
  (bug #32667)
* irc: fix crash when setting wrong value in option
  irc.server.xxx.sasl_mechanism (bug #32670)
* irc: add new options irc.look.color_nicks_in_nicklist and
  irc.look.color_nicks_in_names
* irc: fix crash when completing /part command on a non-irc buffer (bug #32402)
* irc: add many missing commands for target buffer (options irc.msgbuffer.xxx)
  (bug #32216)
* lua: fix crash when many scripts are executing callbacks at same time
* perl: fix memory leak when calling perl functions (bug #32895)
* relay: fix crash on /upgrade when nick in irc client is not yet set
* relay: allow colon in server password received from client
* relay: do not send join for private buffers to client